fix button on safari iphone

--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -44,6 +44,8 @@ kiểu dáng
     display: inline-block;
     margin-top: 15px;
     border: none;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 .btn:hover {
